--- a/progym.html
+++ b/progym.html
@@ -16,11 +16,11 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind, just as physical exercises train the body. Digital Progymasmata is an investigation into the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of “noötechnics” (B. Stiegler).</p>
-<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15">proceedings of the ICCC (2019)</a>.</p>
+<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>.</p>
 <ul>
-<li><a href="https://github.com/kbooten/stylevise">Style🗜Vise</a></li>
-<li><a href="https://github.com/kbooten/manualstyletransfer">Manual Style Transfer</a></li>
-<li><a href="https://github.com/kbooten/alternatingcurrent">Alternating Current</a></li>
+<li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a></li>
+<li><a href="https://github.com/kbooten/manualstyletransfer" target="_blank">Manual Style Transfer</a></li>
+<li><a href="https://github.com/kbooten/alternatingcurrent" target="_blank">Alternating Current</a></li>
 </ul>
 </div></body>
 </html>
