--- a/about.html
+++ b/about.html
@@ -24,5 +24,6 @@
 <p>Researching digital literacies</p>
 <p>&amp;</p>
 <p>Computer generated &amp; mediated literature</p>
+<h6 id="site-made-with-pandocmarkdown"><a href="https://github.com/kbooten/kbooten.github.io" target="_blank">site made with pandoc+markdown</a></h6>
 </div></body>
 </html>
