--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <li><p><a href="https://www.press.umich.edu/9697147/" target="_blank">Chapter in #IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND NATION (University of Michigan Press)</a></p></li>
 <li><p>“How Do Computers Read?” (Panel, MLA2019, Chicago)</p></li>
 <li><p><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2Kb) interfaces (TAPER #2)</a></p></li>
-<li><p><a href="http://www.westernhumanitiesreview.com/summer17/kyle-booten/" target="_blank">Two small poems, one with autocompletions (WESTERN HUMANITIES REVIEW)</a></p></li>
 </ul>
+<!-- * [Two small
+poems, one with autocompletions (WESTERN HUMANITIES REVIEW)](http://www.westernhumanitiesreview.com/summer17/kyle-booten/){target="_blank"} -->
 <!-- * [Partially computer-generated
 verse](https://kylebooten.files.wordpress.com/2018/07/kbooten_what_nature_final.pdf "kbooten_what_nature_final")
 in [BOSTON
