--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <h5 id="digital-progymnasmata"><a href="progym.html">Digital Progymnasmata</a></h5>
 <h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without Ceasing</a></h5>
 <h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
-<h5 id="about"><a href="about.html">About</a></h5>
+<h5 id="about"><a href="about.html">About*</a></h5>
 <hr />
 <p>Now: Neukom Postdoctoral Fellow, Dartmouth College</p>
 <p>Next: Assistant Professor, Dept. of English, UConn</p>
