--- a/progym.html
+++ b/progym.html
@@ -10,7 +10,7 @@
 <body><div>
 <h1 id="kyle-booten">Kyle Booten</h1>
 <hr />
-<h5 id="digital-progymnasmata"><a href="progym.html">Digital Progymnasmata</a></h5>
+<h5 id="digital-progymnasmata"><a href="progym.html">Digital Progymnasmata*</a></h5>
 <h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without Ceasing</a></h5>
 <h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
