--- a/progym.html
+++ b/progym.html
@@ -15,8 +15,8 @@
 <h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind, just as physical exercises train the body. Digital Progymasmata is an investigation into the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of “noötechnics” (B. Stiegler).</p>
-<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>.</p>
+<p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind just as physical exercises train the body. <em>Digital Progymasmata</em> is a project that investigates the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of &quot;noötechnics&quot; (B. Stiegler).</p>
+<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>. Examples include:</p>
 <ul>
 <li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a></li>
 <li><a href="https://github.com/kbooten/manualstyletransfer" target="_blank">Manual Style Transfer</a></li>
