--- a/topray.html
+++ b/topray.html
@@ -15,7 +15,7 @@
 <h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>To Pray Without Ceasing is an under-development text-generation project about caring for strangers online. The system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates responses that are meant to evince empathy. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
-<p>In the fall of 2020, To Pray Without Ceasing will be hosted through <a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">Nokturno’s “digital residence.”</a> During the residence, visitors will be able to engage in communal prayer led by the system in a “virtual monastery.”</p>
+<p>To Pray Without Ceasing is an under-development text-generation project about caring for strangers online. The system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic responses specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, this system never grows weary of paying attention to others.</p>
+<p>In the fall of 2020, To Pray Without Ceasing will be hosted through <a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">Nokturno’s “digital residence.”</a> During the residence, visitors will be able to engage in communal prayer led by the system in a virtual monastery.</p>
 </div></body>
 </html>
