--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </ul></li>
 <li><p><a href="https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11" target="_blank">&quot;Hashtag Rhetoric,&quot; chapter in #IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND NATION (University of Michigan Press)</a></p></li>
 <li><p>“How Do Computers Read?” (Panel, MLA 2019, Chicago)</p></li>
-<li><p><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2Kb) interfaces in TAPER #2</a></p></li>
+<li><p><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a></p></li>
 <li>Partially computer-generated long poem excerpted
 <ul>
 <li>in <a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">BOSTON REVIEW</a></li>
