--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <li><p><a href="https://www.anteism.com/shop/rerites-raw-output-responses-david-jhave-johnston" target="_blank">Response essay to David Jhave Johnston’s RERITES (ANTEISM)</a></p></li>
 <li><p><a href="http://www.lanaturnerjournal.com/v/vspfiles/downloadables/Lana_Turner_No_11.pdf#page=242" target="_blank">Five poems, including 3 collaborations with crowdworkers, in LANA TURNER #11</a></p></li>
 <li><p><a href="https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11" target="_blank">&quot;Hashtag Rhetoric,&quot; chapter in #IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND NATION (University of Michigan Press)</a></p></li>
-<li><p>“How Do Computers Read?” (Panel, MLA 2019, Chicago)</p></li>
+<li><p>&quot;How Do Computers Read?&quot; (Panel, MLA 2019, Chicago)</p></li>
 <li><p><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a></p></li>
 <li>Partially computer-generated long poem excerpted
 <ul>
