--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <ul>
 <li><p><a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">In the fall: Nokturno digital residence</a></p></li>
 <li><p><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">Essay on/with/against computational sentiment analysis in TENTACULAR #4</a></p></li>
+<li><p>Essay on the algorithmic mediation of writing and the concept of care, forthcoming in electronic book review</p></li>
 <li><p>Essay on creative Turing Tests, with Dan Rockmore, forthcoming in electronic book review</p></li>
 <li>Papers in ICCC 2019:
 <ul>
