--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">&quot;Toward Digital <em>Progymnasmata</em>&quot;</a></li>
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=368" target="_blank">&quot;Fragile Pulse: A Meditation App&quot;</a></li>
 </ul></li>
-<li><p><a href="https://www.anteism.com/shop/rerites-raw-output-responses-david-jhave-johnston" target="_blank">Response essay to David Jhave Johnston’s RERITES (ANTEISM)</a></p></li>
+<li>Response essay to David Jhave Johnston’s RERITES (ANTEISM)
+<ul>
+<li><a href="resources/reritespaper.pdf" target="_blank">Excerpt</a></li>
+<li><a href="https://www.anteism.com/shop/rerites-raw-output-responses-david-jhave-johnston" target="_blank">Book</a></li>
+</ul></li>
 <li><p><a href="http://www.lanaturnerjournal.com/v/vspfiles/downloadables/Lana_Turner_No_11.pdf#page=242" target="_blank">Five poems, including 3 collaborations with crowdworkers, in LANA TURNER #11</a></p></li>
 <li><p><a href="https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11" target="_blank">&quot;Hashtag Rhetoric,&quot; chapter in #IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND NATION (University of Michigan Press)</a></p></li>
 <li><p>&quot;How Do Computers Read?&quot; (Panel, MLA 2019, Chicago)</p></li>
@@ -34,7 +38,7 @@
 <ul>
 <li>in <a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">BOSTON REVIEW</a></li>
 <li>in <a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">DATABLEED</a></li>
-<li>forthcoming in LITMUS (UK), <a href="https://www.litmuspublishing.co.uk/Submissions">the lichen issue</a></li>
+<li>forthcoming in LITMUS (UK), <a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">the lichen issue</a></li>
 </ul></li>
 <li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">&quot;Patterns of Wisdom&quot; (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
 </ul>
