--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">&quot;Toward Digital <em>Progymnasmata</em>&quot;</a></li>
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=368" target="_blank">&quot;Fragile Pulse: A Meditation App&quot;</a></li>
 </ul></li>
-<li>Response essay to David Jhave Johnston’s RERITES (ANTEISM)
+<li>Response essay to David Jhave Johnston’s a.i.-powered writing project RERITES (ANTEISM)
 <ul>
 <li><a href="resources/reritespaper.pdf" target="_blank">Excerpt</a></li>
 <li><a href="https://www.anteism.com/shop/rerites-raw-output-responses-david-jhave-johnston" target="_blank">Book</a></li>
