--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
 <li><p><a href="http://www.lanaturnerjournal.com/v/vspfiles/downloadables/Lana_Turner_No_11.pdf#page=242" target="_blank">Five poems, including 3 collaborations with crowdworkers, in LANA TURNER #11</a></p></li>
 <li><p><a href="https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11" target="_blank">&quot;Hashtag Rhetoric,&quot; chapter in #IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND NATION (University of Michigan Press)</a></p></li>
 <li><p>&quot;How Do Computers Read?&quot; (Panel, MLA 2019, Chicago)</p></li>
-<li><p><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a></p></li>
+<li><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a>
+<ul>
+<li><a href="resources/taper2expl.txt" target="_blank">explanations</a></li>
+</ul></li>
 <li>Partially computer-generated long poem excerpted
 <ul>
-<li>in <a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">BOSTON REVIEW</a></li>
-<li>in <a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">DATABLEED</a></li>
-<li>forthcoming in LITMUS (UK), <a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">the lichen issue</a></li>
+<li><a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">in BOSTON REVIEW</a></li>
+<li><a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">in DATABLEED</a></li>
+<li><a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">forthcoming in LITMUS (UK), the lichen issue</a></li>
 </ul></li>
 <li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">&quot;Patterns of Wisdom&quot; (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
 </ul>
