link to article, spacing

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <hr />
 <ul>
 <li><p><a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">In the fall: Nokturno digital residence</a></p></li>
+<li><p>Article on the algorithmic mediation of writing and the concept of care, forthcoming in ELECTRONIC BOOK REVIEW</p></li>
+<li><p><a href="https://electronicbookreview.com/essay/the-anxiety-of-imitation-on-the-boringness-of-creative-turing-tests/" target="_blank">Article on creative Turing Tests, with Dan Rockmore, in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">Essay on/with/against computational sentiment analysis in TENTACULAR #4</a></p></li>
-<li><p>Article on the algorithmic mediation of writing and the concept of care, forthcoming in electronic book review</p></li>
-<li><p>Article on creative Turing Tests, with Dan Rockmore, forthcoming in electronic book review</p></li>
 <li>Papers in ICCC 2019:
 <ul>
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">&quot;Toward Digital <em>Progymnasmata</em>&quot;</a></li>
@@ -37,11 +37,11 @@
 <ul>
 <li><a href="resources/taper2expl.txt" target="_blank">explanations</a></li>
 </ul></li>
-<li>Partially computer-generated long poem excerpted
+<li>Partially-computer-generated long poem excerpted
 <ul>
 <li><a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">in BOSTON REVIEW</a></li>
 <li><a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">in DATABLEED</a></li>
-<li><a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">forthcoming in LITMUS (UK), the lichen issue</a></li>
+<li><a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">in LITMUS (UK), the lichen issue, forthcoming</a></li>
 </ul></li>
 <li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">&quot;Patterns of Wisdom&quot; (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
 </ul>
