--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <ul>
 <li><p><a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">In the fall: Nokturno digital residence</a></p></li>
 <li><p>Article on the algorithmic mediation of writing and the concept of care, forthcoming in ELECTRONIC BOOK REVIEW</p></li>
+<li><p>Article on crowdsourcing literary interpretation, forthcoming in DIGITAL STUDIES/LE CHAMP NUMÉRIQUE</p></li>
 <li><p><a href="https://electronicbookreview.com/essay/the-anxiety-of-imitation-on-the-boringness-of-creative-turing-tests/" target="_blank">Article on creative Turing Tests, with Dan Rockmore, in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">Essay on/with/against computational sentiment analysis in TENTACULAR #4</a></p></li>
 <li>Papers in ICCC 2019:
@@ -35,7 +36,7 @@
 <li><p>&quot;How Do Computers Read?&quot; (Panel, MLA 2019, Chicago)</p></li>
 <li><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a>
 <ul>
-<li><a href="resources/taper2expl.txt" target="_blank">explanations</a></li>
+<li><a href="resources/taper2expl.txt" target="_blank">Artist statements</a></li>
 </ul></li>
 <li>Partially-computer-generated long poem excerpted
 <ul>
