--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <li><p>&quot;How Do Computers Read?&quot; (Panel, MLA 2019, Chicago)</p></li>
 <li><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a>
 <ul>
-<li><a href="resources/taper2expl.txt" target="_blank">Artist statements</a></li>
+<li><a href="resources/taper2expl.txt" target="_blank">Descriptions</a></li>
 </ul></li>
 <li>Partially-computer-generated long poem excerpted
 <ul>
