--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <p>A.B., Princeton University</p>
 <p>Researching digital literacies</p>
 <p>&amp;</p>
-<p>Computer generated &amp; mediated literature</p>
+<p>Computer-generated &amp; -mediated literature</p>
 <h6 id="site-made-with-pandocmarkdown"><a href="https://github.com/kbooten/kbooten.github.io" target="_blank">site made with pandoc+markdown</a></h6>
 </div></body>
 </html>
