--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <hr />
 <ul>
 <li><p><a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">In the fall: Nokturno digital residence</a></p></li>
-<li><p>Mid-June: Conference presentation on Flusser, computer-mediated writing, and <a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>, FLUSSER AND HIS LANGUAGES, VILÉM FLUSSER ARCHIVE</p></li>
-<li><p>Article on the algorithmic mediation of writing and the concept of care forthcoming in ELECTRONIC BOOK REVIEW</p></li>
+<li><p>Article on the <a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">algorithmic mediation of writing and the concept of care</a> in the proceedings of ELO2020</p></li>
+<li><p>Conference presentation on Flusser, computer-mediated writing, and <a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>, FLUSSER AND HIS LANGUAGES, VILÉM FLUSSER ARCHIVE, June 2020.</p></li>
 <li><p>Article on crowdsourcing literary interpretation forthcoming in DIGITAL STUDIES/LE CHAMP NUMÉRIQUE</p></li>
 <li><p><a href="https://electronicbookreview.com/essay/the-anxiety-of-imitation-on-the-boringness-of-creative-turing-tests/" target="_blank">Article on creative Turing Tests, with Dan Rockmore, in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">Essay on/with/against computational sentiment analysis in TENTACULAR #4</a></p></li>
