--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <ul>
 <li><p><a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">In the fall: Nokturno digital residence</a></p></li>
 <li><p>Article on the <a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">algorithmic mediation of writing and the concept of care</a> in the proceedings of ELO2020</p></li>
+<li><p>Poems written with a <a href="https://taper.badquar.to/2/parapraxis_mirror.html" target="_blank">Freudian interface</a> forthcoming in DENVER QUARTERLY.</p></li>
 <li><p>Conference presentation on Flusser, computer-mediated writing, and <a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>, FLUSSER AND HIS LANGUAGES, VILÉM FLUSSER ARCHIVE, June 2020.</p></li>
 <li><p>Article on crowdsourcing literary interpretation forthcoming in DIGITAL STUDIES/LE CHAMP NUMÉRIQUE</p></li>
 <li><p><a href="https://electronicbookreview.com/essay/the-anxiety-of-imitation-on-the-boringness-of-creative-turing-tests/" target="_blank">Article on creative Turing Tests, with Dan Rockmore, in ELECTRONIC BOOK REVIEW</a></p></li>
