describe quote paper

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <li><a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">in DATABLEED</a></li>
 <li><a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">in LITMUS (UK), the lichen issue, forthcoming</a></li>
 </ul></li>
-<li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">&quot;Patterns of Wisdom&quot; (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
+<li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">Short computational lingustic analysis of quotations, with Marti Hearst (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
 </ul>
 <!-- * [Two small
 poems, one with autocompletions (WESTERN HUMANITIES REVIEW)](http://www.westernhumanitiesreview.com/summer17/kyle-booten/){target="_blank"} -->
