--- a/topray.html
+++ b/topray.html
@@ -28,7 +28,12 @@
 <h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>To Pray Without Ceasing is an under-development text generation project about caring for strangers online. The algorithmic system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic prayers specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
-<p>To Pray Without Ceasing will debut in the fall of 2020 during a <a href="https://nokturno.fi/en/news/our-poet-in-digital-residence-2020-is-kyle-booten" target="_blank">“digital residence” hosted by Nokturno</a>. During the residence, visitors will be able to participate “interpassively” in communal prayer led by the system in a virtual monastery.</p>
+<p>To Pray Without Ceasing is a text generation project about caring for strangers online. The algorithmic system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic prayers specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
+<p>I completed To Pray Without Ceasing while the Fall 2020 poet-in-residence at Nokturno.fi.</p>
+<ul>
+<li><a href="https://www.topraywithoutceasing.com/">To Pray Without Ceasing</a></li>
+<li><a href="https://github.com/kbooten/topraywithoutceasing">Code</a></li>
+<li><a href="http://residence6.nokturno.fi/">Residence diary</a></li>
+</ul>
 </div></body>
 </html>
