--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <hr />
 <ul>
 <li><p>Paper on <a href="https://github.com/kbooten/stylevise">Style🗜Vise</a> forthcoming in FLUSSER STUDIES</p></li>
-<li><p>Poem written with the help of <a href="https://stats.stackexchange.com/questions/123060/clustering-a-long-list-of-strings-words-into-similarity-groups/158090#158090">affinity propagation algorithm</a>, forthcoming in LANA TURNER</p></li>
+<li><p>Poem written with the help of <a href="https://stats.stackexchange.com/questions/123060/clustering-a-long-list-of-strings-words-into-similarity-groups/158090#158090">affinity propagation algorithm</a>, forthcoming in <a href="http://www.lanaturnerjournal.com/product-p/lt13-p.htm">LANA TURNER #13</a></p></li>
 <li><p>Several computer-mediated poems forthcoming in FENCE</p></li>
 <li><p><a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">Article on the algorithmic mediation of writing and the concept of care</a> in the proceedings of ELO2020</p></li>
 <li><p><a href="http://nt2.uqam.ca/sites/nt2.uqam.ca/files/fichiers/page/attention_a_la_marche_mind_the_gap_dirige_par_-_edited_by_bertrand_gervais_sophie_marcotte.pdf#page=422">Article on crowdsourcing literary interpretation in the proceedings of ELO2018 (LES PRESSES DE L’ÉCUREUIL)</a></p></li>
