--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
-<li><p>Paper on <a href="https://github.com/kbooten/stylevise">Style🗜Vise</a> forthcoming in FLUSSER STUDIES</p></li>
+<li><p>Paper on <a href="https://github.com/kbooten/stylevise">Style🗜Vise</a> in <a href="https://www.flusserstudies.net/person/kyle-booten">FLUSSER STUDIES #30</a></p></li>
 <li><p>Poem written with the help of <a href="https://stats.stackexchange.com/questions/123060/clustering-a-long-list-of-strings-words-into-similarity-groups/158090#158090">affinity propagation algorithm</a> in <a href="http://www.lanaturnerjournal.com/product-p/lt13-p.htm">LANA TURNER #13</a></p></li>
 <li><p>Several computer-mediated poems forthcoming in FENCE</p></li>
 <li><p><a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">Article on the algorithmic mediation of writing and the concept of care</a> in the proceedings of ELO2020</p></li>
