--- a/topray.html
+++ b/topray.html
@@ -34,6 +34,7 @@
 <li><a href="https://www.topraywithoutceasing.com/">To Pray Without Ceasing</a></li>
 <li><a href="https://github.com/kbooten/topraywithoutceasing">Code</a></li>
 <li><a href="http://residence6.nokturno.fi/">Residence diary</a></li>
+<li><a href="https://eliterature.org/elo2021/posthuman/">ELO/SLSA2021 “Posthuman” Exhibition</a></li>
 </ul>
 </div></body>
 </html>
