--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <ul>
 <li><a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">in BOSTON REVIEW</a></li>
 <li><a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">in DATABLEED</a></li>
-<li><a href="https://www.litmuspublishing.co.uk/Submissions" target="_blank">in LITMUS (UK), the lichen issue, forthcoming</a></li>
+<li><a href="https://www.litmuspublishing.co.uk/Shop/2054-8915-5" target="_blank">in LITMUS (UK), the lichen issue</a></li>
 </ul></li>
 <li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">Short computational lingustic analysis of quotations, with Marti Hearst (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
 </ul>
