--- a/topray.html
+++ b/topray.html
@@ -31,10 +31,10 @@
 <p>To Pray Without Ceasing is a text generation project about caring for strangers online. The algorithmic system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic prayers specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
 <p>I completed To Pray Without Ceasing while the Fall 2020 poet-in-residence at Nokturno.fi.</p>
 <ul>
-<li><a href="https://www.topraywithoutceasing.com/">To Pray Without Ceasing</a></li>
-<li><a href="https://github.com/kbooten/topraywithoutceasing">Code</a></li>
-<li><a href="http://residence6.nokturno.fi/">Residence diary</a></li>
-<li><a href="https://eliterature.org/elo2021/posthuman/">ELO/SLSA2021 “Posthuman” Exhibition</a></li>
+<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To Pray Without Ceasing</a></li>
+<li><a href="https://github.com/kbooten/topraywithoutceasing" target="_blank">Code</a></li>
+<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence diary</a></li>
+<li><a href="https://eliterature.org/elo2021/posthuman/" target="_blank">ELO/SLSA2021 “Posthuman” Exhibition</a></li>
 </ul>
 </div></body>
 </html>
