--- a/progym.html
+++ b/progym.html
@@ -29,11 +29,18 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind just as physical exercises train the body. <em>Digital Progymasmata</em> is a project that investigates the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of “noötechnics” (B. Stiegler).</p>
-<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>, and another is forthcoming in <em>ebr</em>. Examples of digitial progymnasmata include:</p>
+<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>. Examples of digitial progymnasmata include:</p>
 <ul>
-<li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a></li>
+<li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>
+<ul>
+<li><a href="https://www.flusserstudies.net/person/kyle-booten" target="_blank">paper</a></li>
+</ul></li>
 <li><a href="https://github.com/kbooten/manualstyletransfer" target="_blank">Manual Style Transfer</a></li>
-<li><a href="https://github.com/kbooten/alternatingcurrent" target="_blank">Alternating Current</a></li>
+<li><a href="https://github.com/kbooten/alternatingcurrent" target="_blank">Alternating Current</a>
+<ul>
+<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">poetic essay</a></li>
+<li><a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">paper</a></li>
+</ul></li>
 </ul>
 </div></body>
 </html>
