--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
+<li><p><a href="topray.html">To Pray Without Ceasing</a> to be exhibited in xCoAx 2021</p></li>
 <li><p>Paper on <a href="https://github.com/kbooten/stylevise">Style🗜Vise</a> in <a href="https://www.flusserstudies.net/person/kyle-booten">FLUSSER STUDIES #30</a></p></li>
 <li><p>Poem written with the help of <a href="https://stats.stackexchange.com/questions/123060/clustering-a-long-list-of-strings-words-into-similarity-groups/158090#158090">affinity propagation algorithm</a> in <a href="http://www.lanaturnerjournal.com/product-p/lt13-p.htm">LANA TURNER #13</a></p></li>
 <li><p>Several computer-mediated poems forthcoming in FENCE</p></li>
