--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
-<li><p><a href="topray.html">To Pray Without Ceasing</a> to be exhibited in xCoAx 2021</p></li>
+<li><p>To Pray Without Ceasing in <a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></p></li>
+<li><p>Short paper on computational interfaces for/by poets in <a href="https://dl.acm.org/doi/abs/10.1145/3450741.3466813">Creativity and Cognition 2021</a></p></li>
 <li><p>Paper on <a href="https://github.com/kbooten/stylevise">Style🗜Vise</a> in <a href="https://www.flusserstudies.net/person/kyle-booten">FLUSSER STUDIES #30</a></p></li>
 <li><p>Poem written with the help of <a href="https://stats.stackexchange.com/questions/123060/clustering-a-long-list-of-strings-words-into-similarity-groups/158090#158090">affinity propagation algorithm</a> in <a href="http://www.lanaturnerjournal.com/product-p/lt13-p.htm">LANA TURNER #13</a></p></li>
-<li><p>Several computer-mediated poems forthcoming in FENCE</p></li>
+<li><p>Several poems in <a href="https://reader.exacteditions.com/issues/93390/spread/7">FENCE #37-#38</a></p></li>
 <li><p><a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">Article on the algorithmic mediation of writing and the concept of care</a> in the proceedings of ELO 2020</p></li>
 <li><p><a href="http://nt2.uqam.ca/sites/nt2.uqam.ca/files/fichiers/page/attention_a_la_marche_mind_the_gap_dirige_par_-_edited_by_bertrand_gervais_sophie_marcotte.pdf#page=422">Article on crowdsourcing literary interpretation in the proceedings of ELO 2018 (LES PRESSES DE L’ÉCUREUIL)</a></p></li>
 </ul>
@@ -49,26 +50,31 @@
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">“Toward Digital <em>Progymnasmata</em>”</a></li>
 <li><a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=368" target="_blank">“Fragile Pulse: A Meditation App”</a></li>
 </ul></li>
-<li><p>Response essay to David Jhave Johnston’s a.i.-powered writing project RERITES (ANTEISM)</p>
+</ul>
+<!-- * Response essay to David Jhave Johnston’s
+a.i.-powered writing project RERITES (ANTEISM)
+    * [Excerpt](resources/reritespaper.pdf){target="_blank"}
+    * [Book](https://www.anteism.com/shop/rerites-raw-output-responses-david-jhave-johnston){target="_blank"} -->
 <ul>
-<li><a href="resources/reritespaper.pdf" target="_blank">Excerpt</a></li>
-<li><a href="https://www.anteism.com/shop/rerites-raw-output-responses-david-jhave-johnston" target="_blank">Book</a></li>
-</ul></li>
-<li><p><a href="http://www.lanaturnerjournal.com/v/vspfiles/downloadables/Lana_Turner_No_11.pdf#page=242" target="_blank">Five poems, including 3 collaborations with crowdworkers, in LANA TURNER #11</a></p></li>
-<li><p><a href="https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11" target="_blank">“Hashtag Rhetoric,” chapter in #IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND NATION (University of Michigan Press)</a></p></li>
-<li><p>“How Do Computers Read?” (Panel, MLA 2019, Chicago)</p></li>
-<li><p><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a></p>
+<li><a href="http://www.lanaturnerjournal.com/v/vspfiles/downloadables/Lana_Turner_No_11.pdf#page=242" target="_blank">Five poems, including 3 collaborations with crowdworkers, in LANA TURNER #11</a></li>
+</ul>
+<!-- * ["Hashtag Rhetoric," chapter in \#IDENTITY: HASHTAGGING RACE, GENDER, SEXUALITY, AND
+NATION (University of Michigan
+Press)](https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11){target="_blank"} -->
+<!-- * "How Do Computers Read?" (Panel, MLA 2019, Chicago) -->
+<ul>
+<li><a href="http://taper.badquar.to/2/" target="_blank">Two minimal (&lt;2KB) interfaces in TAPER #2</a>
 <ul>
 <li><a href="resources/taper2expl.txt" target="_blank">Descriptions</a></li>
 </ul></li>
-<li><p>Partially-computer-generated long poem excerpted</p>
+<li>Partially-computer-generated long poem excerpted
 <ul>
 <li><a href="https://store.bostonreview.net/media/1621.pdf" target="_blank">in BOSTON REVIEW</a></li>
 <li><a href="https://www.datableedzine.com/kyle-booten-issue-11" target="_blank">in DATABLEED</a></li>
 <li><a href="https://www.litmuspublishing.co.uk/Shop/2054-8915-5" target="_blank">in LITMUS (UK), the lichen issue</a></li>
 </ul></li>
-<li><p><a href="https://www.aclweb.org/anthology/N16-1134.pdf" target="_blank">Short computational lingustic analysis of quotations, with Marti Hearst (NAACL 2016, Best Short Paper Runner-Up)</a></p></li>
 </ul>
+<!-- * [Short computational lingustic analysis of quotations, with Marti Hearst (NAACL 2016, Best Short Paper Runner-Up)](https://www.aclweb.org/anthology/N16-1134.pdf){target="_blank"} -->
 <!-- * [Two small
 poems, one with autocompletions (WESTERN HUMANITIES REVIEW)](http://www.westernhumanitiesreview.com/summer17/kyle-booten/){target="_blank"} -->
 <!-- * [Partially computer-generated
