--- a/topray.html
+++ b/topray.html
@@ -34,7 +34,8 @@
 <li><a href="https://www.topraywithoutceasing.com/" target="_blank">To Pray Without Ceasing</a></li>
 <li><a href="https://github.com/kbooten/topraywithoutceasing" target="_blank">Code</a></li>
 <li><a href="http://residence6.nokturno.fi/" target="_blank">Residence diary</a></li>
-<li><a href="https://eliterature.org/elo2021/posthuman/" target="_blank">ELO/SLSA2021 “Posthuman” Exhibition</a></li>
+<li><a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></li>
+<li><a href="https://eliterature.org/elo2021/posthuman/" target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
 </ul>
 </div></body>
 </html>
