--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
-<li><p>To Pray Without Ceasing in <a href="https://2021.xcoax.org/kbo/">XCOAX 2021</a></p></li>
-<li><p>Short paper on computational interfaces for/by poets in <a href="https://dl.acm.org/doi/abs/10.1145/3450741.3466813">CREATIVITY AND COGNITION 2021</a>, with Katy Gero</p></li>
+<li><p>To Pray Without Ceasing at <a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></p></li>
+<li><p>Short paper on computational interfaces for/by poets in <a href="https://dl.acm.org/doi/abs/10.1145/3450741.3466813">Creativity and Cognition 2021</a>, with Katy Gero</p></li>
 <li><p>Paper on <a href="https://github.com/kbooten/stylevise">Style🗜Vise</a> in <a href="https://www.flusserstudies.net/person/kyle-booten">FLUSSER STUDIES #30</a></p></li>
 <li><p>Poem written with the help of <a href="https://stats.stackexchange.com/questions/123060/clustering-a-long-list-of-strings-words-into-similarity-groups/158090#158090">affinity propagation algorithm</a> in <a href="http://www.lanaturnerjournal.com/product-p/lt13-p.htm">LANA TURNER #13</a></p></li>
 <li><p>Several poems in <a href="https://reader.exacteditions.com/issues/93390/spread/7">FENCE #37-#38</a></p></li>
