--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     ul.task-list{list-style: none;}
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
+  <link rel="stylesheet" href="false" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -23,9 +24,12 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="digital-progymnasmata"><a href="progym.html">Digital Progymnasmata</a></h5>
-<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without Ceasing</a></h5>
-<h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
+<h5 id="digital-progymnasmata"><a href="progym.html">Digital
+Progymnasmata</a></h5>
+<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without
+Ceasing</a></h5>
+<h5 id="selected-publications-appearances"><a href="index.html">Selected
+Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About*</a></h5>
 <hr />
 <p>Assistant Professor, Dept. of English, UConn, Storrs</p>
@@ -37,6 +41,8 @@
 <p>Researching digital literacies</p>
 <p>&amp;</p>
 <p>Computer-generated &amp; -mediated literature</p>
-<h6 id="site-made-with-pandocmarkdown"><a href="https://github.com/kbooten/kbooten.github.io" target="_blank">site made with pandoc+markdown</a></h6>
+<h6 id="site-made-with-pandocmarkdown"><a
+href="https://github.com/kbooten/kbooten.github.io" target="_blank">site
+made with pandoc+markdown</a></h6>
 </div></body>
 </html>
