--- a/progym.html
+++ b/progym.html
@@ -14,6 +14,7 @@
     ul.task-list{list-style: none;}
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
+  <link rel="stylesheet" href="false" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -23,23 +24,41 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="digital-progymnasmata"><a href="progym.html">Digital Progymnasmata*</a></h5>
-<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without Ceasing</a></h5>
-<h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
+<h5 id="digital-progymnasmata"><a href="progym.html">Digital
+Progymnasmata*</a></h5>
+<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without
+Ceasing</a></h5>
+<h5 id="selected-publications-appearances"><a href="index.html">Selected
+Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind just as physical exercises train the body. <em>Digital Progymasmata</em> is a project that investigates the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of “noötechnics” (B. Stiegler).</p>
-<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>. Examples of digitial progymnasmata include:</p>
+<p><em>Progymnasmata</em> were classical rhetorical exercises meant to
+train the mind just as physical exercises train the body. <em>Digital
+Progymasmata</em> is a project that investigates the ways that Natural
+Language Processing can be integrated into tools and games that re-train
+linguistic faculties. It is an example of Digital Humanities research
+for the development of “noötechnics” (B. Stiegler).</p>
+<p>A preliminary paper can be found in the <a
+href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15"
+target="_blank">proceedings of the ICCC (2019)</a>. Examples of digitial
+progymnasmata include:</p>
 <ul>
-<li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>
+<li><a href="https://github.com/kbooten/stylevise"
+target="_blank">Style🗜Vise</a>
 <ul>
-<li><a href="https://www.flusserstudies.net/person/kyle-booten" target="_blank">paper</a></li>
+<li><a href="https://www.flusserstudies.net/person/kyle-booten"
+target="_blank">paper</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/manualstyletransfer" target="_blank">Manual Style Transfer</a></li>
-<li><a href="https://github.com/kbooten/alternatingcurrent" target="_blank">Alternating Current</a>
+<li><a href="https://github.com/kbooten/manualstyletransfer"
+target="_blank">Manual Style Transfer</a></li>
+<li><a href="https://github.com/kbooten/alternatingcurrent"
+target="_blank">Alternating Current</a>
 <ul>
-<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">poetic essay</a></li>
-<li><a href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/" target="_blank">paper</a></li>
+<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten"
+target="_blank">poetic essay</a></li>
+<li><a
+href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/"
+target="_blank">paper</a></li>
 </ul></li>
 </ul>
 </div></body>
