--- a/topray.html
+++ b/topray.html
@@ -14,6 +14,7 @@
     ul.task-list{list-style: none;}
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
+  <link rel="stylesheet" href="false" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -23,19 +24,32 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="digital-progymnasmata"><a href="progym.html">Digital Progymnasmata</a></h5>
-<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without Ceasing*</a></h5>
-<h5 id="selected-publications-appearances"><a href="index.html">Selected Publications &amp; Appearances</a></h5>
+<h5 id="digital-progymnasmata"><a href="progym.html">Digital
+Progymnasmata</a></h5>
+<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without
+Ceasing*</a></h5>
+<h5 id="selected-publications-appearances"><a href="index.html">Selected
+Publications &amp; Appearances</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>To Pray Without Ceasing is a text generation project about caring for strangers online. The algorithmic system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic prayers specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
-<p>I completed To Pray Without Ceasing while the Fall 2020 poet-in-residence at Nokturno.fi.</p>
+<p>To Pray Without Ceasing is a text generation project about caring for
+strangers online. The algorithmic system listens for expressions of need
+on Twitter (e.g. “I really need somebody to talk to”) and generates
+empathetic prayers specific to these needs. Evoking the “Liturgy of the
+Hours,” the system prays in different ways at specific times of the day.
+Unlike humans, it never grows weary of paying attention to others.</p>
+<p>I completed To Pray Without Ceasing while the Fall 2020
+poet-in-residence at Nokturno.fi.</p>
 <ul>
-<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To Pray Without Ceasing</a></li>
-<li><a href="https://github.com/kbooten/topraywithoutceasing" target="_blank">Code</a></li>
-<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence diary</a></li>
+<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To
+Pray Without Ceasing</a></li>
+<li><a href="https://github.com/kbooten/topraywithoutceasing"
+target="_blank">Code</a></li>
+<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence
+diary</a></li>
 <li><a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></li>
-<li><a href="https://eliterature.org/elo2021/posthuman/" target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
+<li><a href="https://eliterature.org/elo2021/posthuman/"
+target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
 </ul>
 </div></body>
 </html>
