--- a/progym.html
+++ b/progym.html
@@ -40,7 +40,7 @@ linguistic faculties. It is an example of Digital Humanities research
 for the development of “noötechnics” (B. Stiegler).</p>
 <p>A preliminary paper can be found in the <a
 href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15"
-target="_blank">proceedings of the ICCC (2019)</a>. Examples of digitial
+target="_blank">proceedings of the ICCC (2019)</a>. Examples of digital
 progymnasmata include:</p>
 <ul>
 <li><a href="https://github.com/kbooten/stylevise"
@@ -60,6 +60,16 @@ target="_blank">poetic essay</a></li>
 href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/"
 target="_blank">paper</a></li>
 </ul></li>
+<li><a href="https://github.com/kbooten/ekphrasisgym"
+target="_blank">Ekphrasis Gym</a></li>
+<li><a href="https://github.com/kbooten/lotuschorusworkshop"
+target="_blank">Lotus Chorus Workshop</a>
+<ul>
+<li>paper forthcoming in the proceedings of the 2022 Ammerman
+Symposium</li>
+</ul></li>
+<li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low
+Phreak</a></li>
 </ul>
 </div></body>
 </html>
