remove note about ammerman

--- a/progym.html
+++ b/progym.html
@@ -65,8 +65,7 @@ target="_blank">Ekphrasis Gym</a></li>
 <li><a href="https://github.com/kbooten/lotuschorusworkshop"
 target="_blank">Lotus Chorus Workshop</a>
 <ul>
-<li>paper forthcoming in the proceedings of the 2022 Ammerman
-Symposium</li>
+<li>paper forthcoming</li>
 </ul></li>
 <li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low
 Phreak</a></li>
