change paper link

--- a/progym.html
+++ b/progym.html
@@ -57,7 +57,7 @@ target="_blank">Alternating Current</a>
 <li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten"
 target="_blank">poetic essay</a></li>
 <li><a
-href="https://stars.library.ucf.edu/elo2020/asynchronous/proceedingspapers/11/"
+href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/"
 target="_blank">paper</a></li>
 </ul></li>
 <li><a href="https://github.com/kbooten/ekphrasisgym"
