--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Publications &amp; Appearances*</a></h5>
 <ul>
 <li><p><a
 href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/"
-target="_blank">Paper on the development of a Keatsean Chrome extension
+target="_blank">Paper on the development of a Keatsian Chrome extension
 in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="https://2021.xcoax.org/kbo/" target="_blank">To Pray
 Without Ceasing at xCoAx 2021</a></p></li>
