--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Publications &amp; Appearances*</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
+<li><p><a href="http://www.manifold.group.shef.ac.uk/issue28/">Poems
+written with algorithmic feedback in BLACKBOX MANIFOLD</a></p></li>
 <li><p><a
 href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/"
 target="_blank">Paper on the development of a Keatsian Chrome extension
