--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr />
 <ul>
 <li><p><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">Paper on a writing-workshop simulator in XCOAX 2023</a></p></li>
-<li><p><a href="http://www.manifold.group.shef.ac.uk/issue28/" target="_blank">Poems written with algorithmic feedback in BLACKBOX MANIFOLD</a></p></li>
+<li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28" target="_blank">Poems written with algorithmic feedback in BLACKBOX MANIFOLD</a></p></li>
 <li><p><a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">Paper on the development of a Keatsian Chrome extension in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="topray.html" target="_blank">A prayer machine at XCOAX 2021 and ELO/SLSA 2021</a></p></li>
 <li><p><a href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/" target="_blank">Article on the algorithmic mediation of writing and the concept of care in ELECTRONIC BOOK REVIEW</a></p></li>
