--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
-<li><p><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">Paper on a writing-workshop simulator in XCOAX 2023</a></p></li>
+<li><p><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">Paper on a writing-workshop simulator at XCOAX 2023</a></p></li>
 <li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28" target="_blank">Poems written with algorithmic feedback in BLACKBOX MANIFOLD</a></p></li>
 <li><p><a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">Paper on the development of a Keatsian Chrome extension in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="topray.html" target="_blank">A prayer machine at XCOAX 2021 and ELO/SLSA 2021</a></p></li>
