--- a/progym.html
+++ b/progym.html
@@ -26,6 +26,7 @@
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms*</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
 <h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
