--- a/salon.html
+++ b/salon.html
@@ -24,15 +24,16 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="noöhacking"><a href="noohacking.html">Noöhacking*</a></h5>
+<h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes*</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
 <h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Noöhacking</em> is the title of my current research program. I use this term for ways that artists and everyday digital media users build and repurpose algorithmic tools in order to take care of their own minds/spirits, an especially challenging and important task amidst a digital millieu that seems designed to make us alienated, unintelligent, and miserable.</p>
-<p>My current book-in-progress—also called <em>Noöhacking</em>—describes some of the key technologies through which an individual can engage in this practice, including browser extensions, social media bots, algorithmic writing-assistants, and mind-mapping tools. This book also theorizes some of the ways that current educational instutions can support their endeavor, and it describes some of my own attempts to “hack” my own “noos,” including my <a href="progym.html">word-gyms that try to make writing (beneficially) harder</a> and my <a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">browser extension that attempts to “re-hijack” my scattered attention</a>.</p>
+<p><em>Salon des Fantômes</em> is a book-length work that documents a week-long literary/philosophical/artistical salon of which I was the only human attendee, the others being AI figments. It is forthcoming from <a href="http://www.insidethecastle.org/" target="_blank">Inside the Castle</a>.</p>
+<p>This salon was what I consider a <a href="progym.html">“word-gym”</a>, an algorithmic system that “makes writing harder” by placing my mind under unusual hormetic stress. Using simple Python code to generate random prompts, I tried to twist GPT-3 out of its comfort zone, goading it to take the voices of a bizarre assortment of characters, each with its own vocabulary, ideology, and linguistic tics. My hope was that these characters would then pay me back in kind, goading me out of my comfort zone and providing me with occasions to have arguments and make observations that I otherwise would not encounter.</p>
+<p>AI is most naturally put in the service of making us less creative, less thoughtful. <em>Salon des Fantômes</em> represents one attempt at using AI against this grain.</p>
 </div></body>
 </html>
