added blackbox poems

--- a/progym.html
+++ b/progym.html
@@ -37,11 +37,14 @@
 <ul>
 <li><a href="https://github.com/kbooten/lotuschorusworkshop" target="_blank">Lotus Chorus Workshop</a>
 <ul>
-<li><a href="https://2023.xcoax.org/pdf/booten.pdf">paper</a></li>
+<li><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">paper</a></li>
 </ul></li>
 <li><a href="https://github.com/kbooten/ekphrasisgym" target="_blank">Ekphrasis Gym</a></li>
 <li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low Phreak</a></li>
-<li><a href="https://github.com/kbooten/allusion_injector" target="_blank">Allusion Injector</a></li>
+<li><a href="https://github.com/kbooten/allusion_injector" target="_blank">Allusion Injector</a>
+<ul>
+<li><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31" target="_blank">poems</a></li>
+</ul></li>
 <li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>
 <ul>
 <li><a href="https://www.flusserstudies.net/person/kyle-booten" target="_blank">paper</a></li>
