--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
+<li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31" target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD #28</a></p></li>
 <li><p><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">Paper on a writing-workshop simulator at XCOAX 2023</a></p></li>
-<li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28" target="_blank">Poems written with algorithmic feedback in BLACKBOX MANIFOLD</a></p></li>
+<li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28" target="_blank">Poems written with a creative writing workshop simulator in BLACKBOX MANIFOLD</a></p></li>
 <li><p><a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">Paper on the development of a Keatsian Chrome extension in ELECTRONIC BOOK REVIEW</a></p></li>
 <li><p><a href="topray.html" target="_blank">A prayer machine at XCOAX 2021 and ELO/SLSA 2021</a></p></li>
 <li><p><a href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/" target="_blank">Article on the algorithmic mediation of writing and the concept of care in ELECTRONIC BOOK REVIEW</a></p></li>
