--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <hr />
 <ul>
 <li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31" target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD #28</a></p></li>
+<li><p><a href="https://www.cabinetmagazine.org/books/the_virtual_sentence.php" target="_blank">A linguistic exercise in THE VIRTUAL SENTENCE (CABINET 2024)</a></p></li>
 <li><p><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">Paper on a writing-workshop simulator at XCOAX 2023</a></p></li>
 <li><p><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28" target="_blank">Poems written with a creative writing workshop simulator in BLACKBOX MANIFOLD</a></p></li>
 <li><p><a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">Paper on the development of a Keatsian Chrome extension in ELECTRONIC BOOK REVIEW</a></p></li>
