--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@ Publications*</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
+<li><p>Two examples of “noöhacking” in TAPER #12 (TOOLS)</p>
+<ul>
+<li><a href="https://taper.badquar.to/12/floranote.html"
+target="_blank">FloraNote, a garden-like note-taking app where notes
+must be periodically weeded</a></li>
+<li><a href="https://taper.badquar.to/12/yearlong_meditation_app.html"
+target="_blank">Yearlong Meditation App</a></li>
+</ul></li>
 <li><p><a
 href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31"
 target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
