--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ Publications*</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
-<li><p>Two examples of “noöhacking” in TAPER #12 (TOOLS)</p>
+<li><p>Two examples of <a href="noohacking.html">noöhacking</a> in TAPER
+#12 (TOOLS)</p>
 <ul>
 <li><a href="https://taper.badquar.to/12/floranote.html"
 target="_blank">FloraNote, a garden-like note-taking app where notes
@@ -110,11 +111,12 @@ NATION (University of Michigan
 Press)](https://www.fulcrum.org/epubs/zp38wf11f?locale=en#/OEBPS/DeKosnik-0021.xhtml%23ch11){target="_blank"} -->
 <!-- * "How Do Computers Read?" (Panel, MLA 2019, Chicago) -->
 <ul>
-<li><a href="http://taper.badquar.to/2/" target="_blank">Two minimal
-(&lt;2KB) interfaces in TAPER #2</a>
+<li>Two small (&lt;2KB) codeworks in TAPER #2
 <ul>
-<li><a href="resources/taper2expl.txt"
-target="_blank">Descriptions</a></li>
+<li><a href="https://taper.badquar.to/2/local_optimum.html">a
+hand-operated machine learning system for poetry</a></li>
+<li><a href="https://taper.badquar.to/2/parapraxis_mirror.html">a
+text-input interface with Freudian slips</a></li>
 </ul></li>
 </ul>
 <!-- * Partially-computer-generated long poem excerpted
