refer to code more

--- a/salon.html
+++ b/salon.html
@@ -60,6 +60,13 @@ des Fantômes</em> is where I have collected some data necessary to
 answer them.</p>
 <p>This salon is another example of what I call a <a
 href="progym.html">“word-gym”</a>.</p>
+<hr />
+<p>Salon des Fantômes is also the name of the software that made the
+book possible, an infernally complicated Python “wrapper” that both
+manages the salon and uses relatively “unintelligent” techniques of
+text-generation to create prompts. My goal was to explore the ways that
+these older, simpler techniques—far from outmoded—could be crucial for
+making AI stranger and more worth talking too.</p>
 <p>Code available <a
 href="https://github.com/kbooten/salon_des_fantomes/tree/main"
 target="_blank">here</a>.</p>
