word-gyms -> word gyms

--- a/salon.html
+++ b/salon.html
@@ -30,7 +30,7 @@
 </header>
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
-<h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
+<h5 id="word-gyms"><a href="progym.html">Word Gyms</a></h5>
 <h5 id="salon-des-fantômes"><a href="salon.html">Salon des
 Fantômes*</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
