--- a/salon.html
+++ b/salon.html
@@ -42,7 +42,7 @@ Publications</a></h5>
 <p><a href="https://asterismbooks.com/product/salon-des-fantomes"
 target="_blank"><em>Salon des Fantômes; or, Streptohormetic Prompt
 Engineering for the Production of a Jagged Noetic Substrate</em> (Inside
-the Castle 2024)</a> is a book-length record a five-day philosophical
+the Castle 2024)</a> is a book-length record of a five-day philosophical
 and artistic salon in which I was the only human attendee, the others
 being over twenty AI-fabricated interlocutors (an architect from
 Soviet-era Riga, an anthropomorphic and monosyllabic mountain, etc.). In
