--- a/ensemble.html
+++ b/ensemble.html
@@ -35,22 +35,20 @@
 Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park</a></h5>
+<h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park*</a></h5>
 <h5 id="selected-publications"><a href="index.html">Selected
 Publications</a></h5>
-<h5 id="about"><a href="about.html">About*</a></h5>
+<h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>Assistant Professor, Dept. of English, UConn, Storrs</p>
-<p>Previous: Neukom Postdoctoral Fellow, Dartmouth College</p>
-<p>Ph.D., UC Berkeley</p>
-<p>2016 Spencer/NAEd Dissertation Fellow</p>
-<p>M.F.A., University of Michigan, Ann Arbor</p>
-<p>A.B., Princeton University</p>
-<p><br><br />
-Researching the algorithmic mediation of thought, especially poetic
-thought</p>
-<h6 id="site-made-with-pandocmarkdown"><a
-href="https://github.com/kbooten/kbooten.github.io" target="_blank">site
-made with pandoc+markdown</a></h6>
+<p>With Katy Ilonka Gero, I edit <a
+href="https://www.ensemblepark.com/"><em>Ensemble Park</em></a><em>: A
+Journal of Human+Computer Writing</em>. We intend to document but also
+respond critically to the rise of Large Language Models (LLMs) and the
+ways that contemporary “AI” are changing what it means to write.
+<em>Ensemble Park</em> emphasizes risky and unexpected entanglements
+between human and machine intelligences, including LLMs as well as
+other—older or simply different—algorithmic systems for the production
+and manipulation of natural language. It is both a literary journal and
+a journal of rogue human-computer interaction research.</p>
 </div></body>
 </html>
