--- a/noohacking.html
+++ b/noohacking.html
@@ -35,6 +35,7 @@
 Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
+<h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park</a></h5>
 <h5 id="selected-publications"><a href="index.html">Selected
 Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
