--- a/salon.html
+++ b/salon.html
@@ -30,11 +30,12 @@
 </header>
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
-<h5 id="word-gyms"><a href="progym.html">Word Gyms</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des
+<h5 id="book-gyms"><a href="gymsbook.html">BOOK: Gyms</a></h5>
+<h5 id="book-salon-des-fantômes"><a href="salon.html">BOOK: Salon des
 Fantômes*</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
+<h5 id="word-gyms"><a href="progym.html">Word Gyms</a></h5>
 <h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park</a></h5>
 <h5 id="selected-publications"><a href="index.html">Selected
 Publications</a></h5>
