--- a/gymsbook.html
+++ b/gymsbook.html
@@ -30,10 +30,10 @@
 </header>
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
-<h5 id="book-gyms"><a href="gymsbook.html">BOOK: Gyms</a></h5>
+<h5 id="book-gyms"><a href="gymsbook.html">BOOK: Gyms*</a></h5>
 <h5 id="book-salon-des-fantômes"><a href="salon.html">BOOK: Salon des
 Fantômes</a></h5>
-<!-- ##### [To Pray Without Ceasing*](topray.html)
+<!-- ##### [To Pray Without Ceasing](topray.html)
  -->
 <h5 id="word-gyms"><a href="progym.html">Word Gyms</a></h5>
 <h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park</a></h5>
@@ -41,24 +41,10 @@ Fantômes</a></h5>
 Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>To Pray Without Ceasing is a text generation project about caring for
-strangers online. The algorithmic system listens for expressions of need
-on Twitter (e.g. “I really need somebody to talk to”) and generates
-empathetic prayers specific to these needs. Evoking the “Liturgy of the
-Hours,” the system prays in different ways at specific times of the day.
-Unlike humans, it never grows weary of paying attention to others.</p>
-<p>I completed To Pray Without Ceasing while the Fall 2020
-poet-in-residence at Nokturno.fi.</p>
-<ul>
-<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To
-Pray Without Ceasing</a></li>
-<li><a href="https://github.com/kbooten/topraywithoutceasing"
-target="_blank">Code</a></li>
-<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence
-diary</a></li>
-<li><a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></li>
-<li><a href="https://eliterature.org/elo2021/posthuman/"
-target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
-</ul>
+<p>dispersed holdings (2025)</p>
+<p>Poems written with nine custom “word gyms,” algorithmic systems
+designed to place my poetic faculties under stress and strain.</p>
+<p>Find it <a href="https://asterismbooks.com/product/gyms-kyle-booten"
+target="_blank">here</a>.</p>
 </div></body>
 </html>
